Commiting Event Type Management

--- a/src/app/components/drawers/drawer-navbar-admin/drawer-navbar.component.html
+++ b/src/app/components/drawers/drawer-navbar-admin/drawer-navbar.component.html
@@ -3,7 +3,7 @@
   <ul>
     <li>Home</li>
     <li>User Management</li>
-    <li>Event Types</li>
+    <li (click)="navigateToEventTypeManagement()">Event Types</li>
     <li>Categories</li>
     <li (click)="toggleCommentsSidebar()">Comments & reviews requests</li>
     <li (click)="toggleReportsSidebar()">Reports</li>
