--- a/src/app/components/event-type-management/add/add.component.css
+++ b/src/app/components/event-type-management/add/add.component.css
@@ -21,6 +21,11 @@
   display: flex;
   flex-direction: column;
   align-items: center; /* Center elements horizontally */
+  z-index: 100;
+}
+
+h1 {
+  z-index: 100;
 }
 
 .form {
@@ -162,4 +167,11 @@ legend {
   background-color: #D9D9D9;
   border-radius: 50%;
   opacity: 0.8;
+}
+
+
+.error-message {
+  z-index: 100;
+  text-align: center;
+  padding: 5px;
 }
