Commiting Create Event

--- a/src/app/components/drawers/drawer-navbar-organizer/drawer-navbar-organizer.component.html
+++ b/src/app/components/drawers/drawer-navbar-organizer/drawer-navbar-organizer.component.html
@@ -1,7 +1,7 @@
 <!-- Navigation Sidebar -->
 <div class="sidebar" [class.open]="isSidebarOpen">
   <ul>
-    <li>My events</li>
+    <li (click)="navigateToMyEvents()">My events</li>
     <li>Calendar</li>
     <li>Categories</li>
     <li>Invitations</li>
