--- a/src/app/components/event-budget/event-budget.component.css
+++ b/src/app/components/event-budget/event-budget.component.css
@@ -7,6 +7,7 @@ article {
   justify-content: start;
   align-items: center;
   padding: 18px;
+  position: relative;
 }
 
 h3 {
@@ -67,3 +68,19 @@ button:hover {
   color: #412c26;
 }
 
+.popup-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 20;
+}
+
+.popup-container {
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
