Integrate event budget management on event page
???

--- a/src/app/components/event-management/event-page/event-page.component.html
+++ b/src/app/components/event-management/event-page/event-page.component.html
@@ -37,6 +37,8 @@
     </div>
   </div>
 
+  <!-- <app-event-budget [event]="event"/> -->
+
   <!-- Brown Rectangle (Comments & Reviews) -->
   <div class="brown-rectangle">
     <h3>Comments & Reviews</h3>
