--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="event" class="event-details-container">
+<div *ngIf="event.id != -1; else loadingDiv" class="event-details-container">
   <h2>{{ event.name }}</h2>
   <p><strong>Location:</strong> {{ event.location }}</p>
   <p><strong>Date:</strong> From {{ event.startDate }} to {{ event.endDate }}</p>
@@ -10,3 +10,7 @@
 
   <app-event-budget [event]="event"/>
 </div>
+
+<ng-template #loadingDiv>
+  <div style="width: 100%; height: 100%; cursor: progress !important;"></div>
+</ng-template>
