--- a/src/app/offerings/service-details/service-details.component.html
+++ b/src/app/offerings/service-details/service-details.component.html
@@ -1,3 +1,4 @@
+@if (service.id != -1) {
 <article>
   <h2>{{ service.name }} </h2>
   <p>{{ service.description }} </p>
@@ -90,3 +91,6 @@
     </form>
   </div>
 </div>
+} @else {
+  <div style="width: 100%; height: 100%; cursor: progress !important;"></div>
+}
