--- a/src/app/components/profiles/view-provider-profile/view-provider-profile.component.html
+++ b/src/app/components/profiles/view-provider-profile/view-provider-profile.component.html
@@ -86,4 +86,4 @@
   </div>
 </div>
 
-<app-chat-sidebar [chaterName]=user.companyName [chaterId]=user.id [isOpen]="isChatOpen"></app-chat-sidebar>
+<app-chat-sidebar [chatter]="user.id" [chaterName]=user.companyName [chaterId]=user.id [isOpen]="isChatOpen && !!user"></app-chat-sidebar>
