Fix always open chat sidebar & stop clearing local storage on homepage

--- a/src/app/communication/inbox/inbox.component.html
+++ b/src/app/communication/inbox/inbox.component.html
@@ -16,5 +16,5 @@
   </section>
 
 
-  <app-chat-sidebar [chatter]="selectedChatter" [isOpen]="true"/>
+  <app-chat-sidebar [chatter]="selectedChatter" [isOpen]="!!selectedChat"/>
 </main>
