added invitations popup fixed design and added more details

--- a/src/app/components/event-management/create-event/create-event.component.html
+++ b/src/app/components/event-management/create-event/create-event.component.html
@@ -92,14 +92,14 @@
     <!-- Privacy Type -->
     <div class="button-container">
       <button
-        class="custom-radio-btn"
+        class="custom-radio-btn1"
         [class.selected]="eventData.type === 'OPEN'"
         (click)="eventData.type = 'OPEN'"
         type="button">Open
       </button>
 
       <button
-        class="custom-radio-btn"
+        class="custom-radio-btn2"
         [class.selected]="eventData.type === 'CLOSED'"
         (click)="eventData.type = 'CLOSED'"
         type="button">Closed
