--- a/src/app/components/event-management/create-event/create-event.component.css
+++ b/src/app/components/event-management/create-event/create-event.component.css
@@ -313,9 +313,7 @@ legend {
   padding: 0 5px;
 }
 
-
-
-.custom-radio-btn {
+.custom-radio-btn1 {
   font-family: 'Petrona', sans-serif;
   font-size: 16px;
   padding: 10px 20px;
@@ -332,13 +330,41 @@ legend {
   margin-bottom: 16px;
 }
 
-.custom-radio-btn.selected {
+.custom-radio-btn1.selected {
   background-color: #523D35;
   color: white;
   border-color: #523D35;
 }
 
-.custom-radio-btn:hover {
+.custom-radio-btn1:hover {
+  background-color: #959D90;
+  opacity: 0.8;
+}
+
+.custom-radio-btn2 {
+  font-family: 'Petrona', sans-serif;
+  font-size: 16px;
+  padding: 10px 20px;
+  background-color: transparent;
+  border: 2px solid #523D35;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  color: #523D35;
+  display: flex;
+  gap: 20px;
+  z-index: 100;
+  margin-top: 0px;
+  margin-bottom: 16px;
+}
+
+.custom-radio-btn2.selected {
+  background-color: #523D35;
+  color: white;
+  border-color: #523D35;
+}
+
+.custom-radio-btn2:hover {
   background-color: #959D90;
   opacity: 0.8;
 }
