--- a/src/app/components/invitations/invitation-popup.component.html
+++ b/src/app/components/invitations/invitation-popup.component.html
@@ -1,23 +1,39 @@
 <div class="popup-container">
   <div class="popup">
+    <div class="circle-one"></div>
+    <div class="circle-two"></div>
+    <div class="circle-three"></div>
+    <div class="circle-four"></div>
     <h1>Create invitations for a private event</h1>
     <p>
-      Invite desired participants to the event by entering their email addresses.
-      The invitations will include all details and instructions for following the event.
+      Invite participants to the event by entering their email addresses.
     </p>
 
     <div class="email-list">
-      <label><mat-icon>group_add</mat-icon> Add email addresses of people you are inviting</label>
+      <label><mat-icon>group_add</mat-icon> Add invitee email addresses</label>
 
-      <div *ngFor="let email of emails; let i = index" class="email-item">
+      <div *ngFor="let email of emails; let i = index; trackBy: trackByIndex" class="email-item">
         <input [(ngModel)]="emails[i]" type="email" placeholder="email address" />
-        <button mat-icon-button (click)="validateEmail(i)"><mat-icon>check</mat-icon></button>
-        <button mat-icon-button (click)="removeEmail(i)"><mat-icon>delete</mat-icon></button>
+        <button mat-icon-button color="primary" (click)="validateEmail(i)">
+          <mat-icon>check</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="removeEmail(i)">
+          <mat-icon>delete</mat-icon>
+        </button>
+
+        <!-- Plus dugme samo na poslednjem inputu -->
+        <button
+          *ngIf="i === emails.length - 1 && emails.length < maxGuests"
+          mat-icon-button
+          (click)="addEmail()"
+          color="accent"
+        >
+          <mat-icon>add</mat-icon>
+        </button>
       </div>
 
-      <div class="add-email">
-        <input [(ngModel)]="newEmail" placeholder="email address" type="email" />
-        <button mat-icon-button (click)="addEmail()"><mat-icon>add</mat-icon></button>
+      <div class="limit-message" *ngIf="emails.length >= maxGuests">
+        You have reached the maximum number of guests ({{ maxGuests }}).
       </div>
     </div>
 
