fixed route for admin home page

--- a/src/app/components/home/home-admin/home-admin.component.html
+++ b/src/app/components/home/home-admin/home-admin.component.html
@@ -28,7 +28,7 @@
 
       <!-- Navigation links -->
       <div class="nav-links">
-        <a href="#">HOME</a> | <a href="#">PROFILE</a> | <a href="#">SETTINGS</a>
+        <a routerLink="/home-admin">HOME</a> | <a routerLink="/home-admin">PROFILE</a> | <a href="#">SETTINGS</a>
       </div>
     </div>
   </div>
