added Invitations Overview page for organizer

--- a/src/app/components/drawers/drawer-navbar-organizer/drawer-navbar-organizer.component.html
+++ b/src/app/components/drawers/drawer-navbar-organizer/drawer-navbar-organizer.component.html
@@ -4,7 +4,7 @@
     <li (click)="navigateToMyEvents()">My events</li>
     <li>Calendar</li>
     <li>Categories</li>
-    <li>Invitations</li>
+    <li (click)="navigateToMyInvitations()">Invitations</li>
     <li>Budget planning</li>
     <li>Favourite services/products</li>
     <li>Messages</li>
