--- a/src/app/components/invitations/invitation-popup/invitation-popup.component.html
+++ b/src/app/components/invitations/invitation-popup/invitation-popup.component.html
@@ -4,6 +4,7 @@
     <div class="circle-two"></div>
     <div class="circle-three"></div>
     <div class="circle-four"></div>
+
     <h1>Create invitations for a private event</h1>
     <p>
       Invite participants to the event by entering their email addresses.
@@ -11,6 +12,11 @@
 
     <div class="email-list">
       <label><mat-icon>group_add</mat-icon> Add invitee email addresses</label>
+
+      <div *ngFor="let email of existingEmails" class="email-item">
+        <input [value]="email" type="email" disabled />
+        <mat-icon class="readonly-icon">lock</mat-icon>
+      </div>
 
       <div *ngFor="let email of emails; let i = index; trackBy: trackByIndex" class="email-item">
         <input [(ngModel)]="emails[i]" type="email" placeholder="email address" />
@@ -20,10 +26,8 @@
         <button mat-icon-button color="warn" (click)="removeEmail(i)">
           <mat-icon>delete</mat-icon>
         </button>
-
-        <!-- Plus dugme samo na poslednjem inputu -->
         <button
-          *ngIf="i === emails.length - 1 && emails.length < maxGuests"
+          *ngIf="i === emails.length - 1 && totalCount() < maxGuests"
           mat-icon-button
           (click)="addEmail()"
           color="accent"
@@ -32,7 +36,7 @@
         </button>
       </div>
 
-      <div class="limit-message" *ngIf="emails.length >= maxGuests">
+      <div class="limit-message" *ngIf="totalCount() >= maxGuests">
         You have reached the maximum number of guests ({{ maxGuests }}).
       </div>
     </div>
